--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.pyc
 .installed.cfg
 .mr.developer.cfg
+*-mxdev.txt
 README.html
 bin/
 build/
@@ -14,3 +15,4 @@ eggs/
 parts/
 sources/
 var/
+instance/
