--- a/instance.yaml
+++ b/instance.yaml
@@ -1,3 +1,3 @@
 default_context:
     initial_user_password: 'admin'
-    zcml_package_includes: 'collective.collectiveftwupgrade'
+    zcml_package_includes: 'collective.ftw.upgrade'
