--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ test = [
     "ftw.builder >= 2.0.0.dev0",
     "plone.testing",
     "plone.app.testing",
+    "zc.buildout",
 ]
 
 [project.urls]
