Enable the isort pre-commit hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,13 +158,10 @@ lint.ignore = [
 ]
 
 [tool.ruff.lint.isort]
-case-sensitive = false
-no-sections = true
-force-single-line = true
-from-first = true
-lines-after-imports = 2
-lines-between-types = 1
-order-by-type = false
+profile = "plone"
+
+[tool.isort]
+profile = "plone"
 
 [tool.ruff.format]
 preview = true
