--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,10 +11,10 @@ repos:
     hooks:
     -   id: pyupgrade
         args: [--py38-plus]
-# -   repo: https://github.com/pycqa/isort
-#     rev: 6.0.1
-#     hooks:
-#     -   id: isort
+-   repo: https://github.com/pycqa/isort
+    rev: 6.0.1
+    hooks:
+    -   id: isort
 # -   repo: https://github.com/psf/black
 #     rev: 25.1.0
 #     hooks:
