--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,10 +15,10 @@ repos:
     rev: 6.0.1
     hooks:
     -   id: isort
-# -   repo: https://github.com/psf/black
-#     rev: 25.1.0
-#     hooks:
-#     -   id: black
+-   repo: https://github.com/psf/black
+    rev: 25.1.0
+    hooks:
+    -   id: black
 # -   repo: https://github.com/collective/zpretty
 #     rev: 3.1.0
 #     hooks:
