--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,18 +30,17 @@ repos:
 #  _your own configuration lines_
 #  """
 ##
-# -   repo: https://github.com/PyCQA/flake8
-#     rev: 7.1.2
-#     hooks:
-#     -   id: flake8
-#
-# ##
-# # Add extra configuration options in .meta.toml:
-# #  [pre_commit]
-# #  flake8_extra_lines = """
-# #  _your own configuration lines_
-# #  """
-# ##
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.1.2
+    hooks:
+    -   id: flake8
+##
+# Add extra configuration options in .meta.toml:
+#  [pre_commit]
+#  flake8_extra_lines = """
+#  _your own configuration lines_
+#  """
+##
 # -   repo: https://github.com/codespell-project/codespell
 #     rev: v2.4.1
 #     hooks:
