--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,38 +54,34 @@ repos:
 #  _your own configuration lines_
 #  """
 ##
-# -   repo: https://github.com/mgedmin/check-manifest
-#     rev: "0.50"
-#     hooks:
-#     -   id: check-manifest
-# -   repo: https://github.com/regebro/pyroma
-#     rev: "4.2"
-#     hooks:
-#     -   id: pyroma
-# -   repo: https://github.com/mgedmin/check-python-versions
-#     rev: "0.22.1"
-#     hooks:
-#     -   id: check-python-versions
-#         args: ['--only', 'setup.py,pyproject.toml']
-# -   repo: https://github.com/collective/i18ndude
-#     rev: "6.2.1"
-#     hooks:
-#     -   id: i18ndude
-#
-#
-# ##
-# # Add extra configuration options in .meta.toml:
-# #  [pre_commit]
-# #  i18ndude_extra_lines = """
-# #  _your own configuration lines_
-# #  """
-# ##
-#
-#
-# ##
-# # Add extra configuration options in .meta.toml:
-# #  [pre_commit]
-# #  extra_lines = """
-# #  _your own configuration lines_
-# #  """
-# ##
+-   repo: https://github.com/mgedmin/check-manifest
+    rev: "0.50"
+    hooks:
+    -   id: check-manifest
+-   repo: https://github.com/regebro/pyroma
+    rev: "4.2"
+    hooks:
+    -   id: pyroma
+-   repo: https://github.com/mgedmin/check-python-versions
+    rev: "0.22.1"
+    hooks:
+    -   id: check-python-versions
+        args: ['--only', 'setup.py,pyproject.toml']
+-   repo: https://github.com/collective/i18ndude
+    rev: "6.2.1"
+    hooks:
+    -   id: i18ndude
+##
+# Add extra configuration options in .meta.toml:
+#  [pre_commit]
+#  i18ndude_extra_lines = """
+#  _your own configuration lines_
+#  """
+##
+##
+# Add extra configuration options in .meta.toml:
+#  [pre_commit]
+#  extra_lines = """
+#  _your own configuration lines_
+#  """
+##
