--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,58 @@
+# Generated from:
+# https://github.com/plone/meta/tree/main/src/plone/meta/default
+# See the inline comments on how to expand/tweak this configuration file
+# python related
 *.egg-info
-*.mo
 *.pyc
-.installed.cfg
-.mr.developer.cfg
-*-mxdev.txt
-README.html
-bin/
+*.pyo
+
+# translation related
+*.mo
+
+# tools related
 build/
-buildout.cfg
-coverage/
-develop-eggs/
+.coverage
+.*project
+coverage.xml
 dist/
+docs/_build
+__pycache__/
+.tox
+.vscode/
+node_modules/
+forest.dot
+forest.json
+
+# venv / buildout related
+bin/
+develop-eggs/
 eggs/
+.eggs/
+etc/
+.installed.cfg
+include/
+lib/
+lib64
+.mr.developer.cfg
 parts/
-sources/
+pyvenv.cfg
 var/
-instance/
+local.cfg
+
+# mxdev
+/instance/
+/.make-sentinels/
+/*-mxdev.txt
+/reports/
+/sources/
+/venv/
+.installed.txt
+
+
+##
+# Add extra configuration options in .meta.toml:
+#  [gitignore]
+#  extra_lines = """
+#  _your own configuration lines_
+#  """
+##
