--- a/.meta.toml
+++ b/.meta.toml
@@ -65,6 +65,7 @@ dependencies_ignores = "['blessed','cgi','distutils','other.package']"
 
 [tox]
 use_mxdev = true
+test_matrix = { "6.2" = ["3.13", "3.10"], "6.1" = ["3.13", "3.10"], "6.0" = ["3.13", "3.10"] }
 
 [gitignore]
 extra_lines = """
