--- a/.meta.toml
+++ b/.meta.toml
@@ -3,7 +3,16 @@
 # See the inline comments on how to expand/tweak this configuration file
 [meta]
 template = "default"
-commit-id = "2.0.1.dev0"
+commit-id = "2.3.1"
+
+[github]
+jobs = [
+   "qa",
+#   "coverage",
+#   "dependencies",
+#   "release_ready",
+   "circular",
+]
 
 [pyproject]
 codespell_ignores = "requestor,"
@@ -70,4 +79,5 @@ test_matrix = { "6.2" = ["3.13", "3.10"], "6.1" = ["3.13", "3.10"], "6.0" = ["3.
 [gitignore]
 extra_lines = """
 !/constraints-mxdev.txt
+/.mxdev_cache
 """
