--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,22 +7,23 @@ ci:
 
 repos:
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v3.20.0
+    rev: v3.21.2
     hooks:
     -   id: pyupgrade
         args: [--py38-plus]
 -   repo: https://github.com/pycqa/isort
-    rev: 6.0.1
+    rev: 7.0.0
     hooks:
     -   id: isort
--   repo: https://github.com/psf/black
-    rev: 25.1.0
+-   repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 25.11.0
     hooks:
     -   id: black
 -   repo: https://github.com/collective/zpretty
-    rev: 3.1.0
+    rev: 3.1.1
     hooks:
     -   id: zpretty
+
 ##
 # Add extra configuration options in .meta.toml:
 #  [pre_commit]
@@ -31,9 +32,10 @@ repos:
 #  """
 ##
 -   repo: https://github.com/PyCQA/flake8
-    rev: 7.1.2
+    rev: 7.3.0
     hooks:
     -   id: flake8
+
 ##
 # Add extra configuration options in .meta.toml:
 #  [pre_commit]
@@ -47,6 +49,7 @@ repos:
     -   id: codespell
         additional_dependencies:
           - tomli
+
 ##
 # Add extra configuration options in .meta.toml:
 #  [pre_commit]
@@ -55,22 +58,24 @@ repos:
 #  """
 ##
 -   repo: https://github.com/mgedmin/check-manifest
-    rev: "0.50"
+    rev: "0.51"
     hooks:
     -   id: check-manifest
 -   repo: https://github.com/regebro/pyroma
-    rev: "4.2"
+    rev: "5.0"
     hooks:
     -   id: pyroma
 -   repo: https://github.com/mgedmin/check-python-versions
-    rev: "0.22.1"
+    rev: "0.24.0"
     hooks:
     -   id: check-python-versions
         args: ['--only', 'setup.py,pyproject.toml']
 -   repo: https://github.com/collective/i18ndude
-    rev: "6.2.1"
+    rev: "6.3.0"
     hooks:
     -   id: i18ndude
+
+
 ##
 # Add extra configuration options in .meta.toml:
 #  [pre_commit]
@@ -78,6 +83,8 @@ repos:
 #  _your own configuration lines_
 #  """
 ##
+
+
 ##
 # Add extra configuration options in .meta.toml:
 #  [pre_commit]
